<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainPlatillos"
    tools:showIn="@layout/activity_platillos">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Actualizar"
        android:id="@+id/botonActelem"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/colorLetras"
        android:layout_height="wrap_content"
        android:text="@string/PlatillosOrden"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listaElementos"
        android:background="@color/colorLetras"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:layout_above="@+id/botonActelem" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Statusorden"
        android:background="@color/colorStatus"
        android:id="@+id/botonStatus"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
