<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMesas"
    tools:showIn="@layout/activity_mesas">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mesa"
        android:id="@+id/textView2"
        android:textColor="@color/colorLetras"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignEnd="@+id/button3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="num mesa"
        android:textSize="30sp"
        android:textColor="@color/colorLetras"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:background="@color/colorLetras"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Agregar_mesa"
        android:id="@+id/button2"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:layout_below="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Actualizar"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:id="@+id/button3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
